feat(postcss-processor): Enhance PostCSS Tailwind presets with autoprefixer, postcss-nested, and browserslist integration.

--- a/apps/docs/src/pages/docs/ecosystem/postcss-processor.mdx
+++ b/apps/docs/src/pages/docs/ecosystem/postcss-processor.mdx
@@ -47,7 +47,7 @@ export default config;
 
 ### Tailwind v4 Preset (Recommended)
 
-This preset supports Tailwind CSS v4, utilizing `@tailwindcss/postcss`. It also automatically handles `@reference` injection for `@apply` directives, making usage simpler in isolated component styles.
+This preset supports Tailwind CSS v4, utilizing `@tailwindcss/postcss`. It includes `autoprefixer`, `postcss-nested`, and `cssnano` by default. It also automatically handles `@reference` injection for `@apply` directives, making usage simpler in isolated component styles.
 
 ```bash
 bun add -D @tailwindcss/postcss tailwindcss
@@ -70,6 +70,13 @@ const config = await new ConfigBuilder()
 
 export default config;
 ```
+
+
+### Browser Support
+
+By default, the presets target a broad range of modern browsers (`>0.3%, not ie 11, not dead, not op_mini all`).
+
+To override this, add a `browserslist` configuration to your `package.json` or create a `.browserslistrc` file in your project root. The processor will automatically detect and use your custom configuration.
 
 ## Custom Configuration
 
