feat(react-router): Added layout as part of the config and Improved react router to be a simple plugin for the react integration.

--- a/playground/react-router/src/pages/mdx-example.mdx
+++ b/playground/react-router/src/pages/mdx-example.mdx
@@ -1,6 +1,8 @@
 import { BaseLayout } from '@/layouts/base-layout';
 
-export const layout = BaseLayout;
+export const config = {
+  layout: BaseLayout,
+};
 
 export const getMetadata = () => ({
   title: 'MDX Example | Blog',
