feat(react-router): Add footer to BaseLayout and implement post styles in CSS

--- a/playground/react-router/src/pages/mdx-example.mdx
+++ b/playground/react-router/src/pages/mdx-example.mdx
@@ -9,6 +9,8 @@ export const getMetadata = () => ({
   description: 'An example MDX page with the EcoPages React Router',
 });
 
+<a href="/" className="back-link">← Back to Blog</a>
+
 # Writing with MDX
 
 This page is written in **MDX** - a powerful combination of Markdown and JSX.
