feat(react-router): added config.layout to mdx components

--- a/apps/docs/src/pages/docs/core/architecture.mdx
+++ b/apps/docs/src/pages/docs/core/architecture.mdx
@@ -1,6 +1,8 @@
 import { DocsLayout } from '@/layouts/docs-layout';
 
-export const layout = DocsLayout;
+export const config = {
+    layout: DocsLayout,
+};
 
 export const getMetadata = () => ({
     title: 'Docs | Architecture',
