--- a/apps/docs/src/pages/docs/getting-started/configuration.mdx
+++ b/apps/docs/src/pages/docs/getting-started/configuration.mdx
@@ -1,7 +1,9 @@
 import { ApiField } from '@/components/api-field/api-field.kita';
 import { DocsLayout } from '@/layouts/docs-layout';
 
-export const layout = DocsLayout;
+export const config = {
+	layout: DocsLayout,
+};
 
 export const getMetadata = () => ({
 	title: 'Docs | Configuration',
