feat(mdx): update layout export to config for consistency across MDX files

--- a/apps/docs/src/pages/docs/integrations/mdx.mdx
+++ b/apps/docs/src/pages/docs/integrations/mdx.mdx
@@ -50,7 +50,9 @@ You can define a wrapper layout for your MDX content by exporting a `layout` com
 ```markdown
 import { BaseLayout } from '@/layouts/base-layout';
 
-export const layout = BaseLayout;
+export const config = {
+  layout: BaseLayout,
+};
 
 # Hello World
 
@@ -80,9 +82,8 @@ You can import and use components directly in your MDX files. Remember to export
 import { Card } from '@/components/card';
 import { BaseLayout } from '@/layouts/base-layout';
 
-export const layout = BaseLayout;
-
 export const config = {
+  layout: BaseLayout,
   dependencies: {
     components: [Card, BaseLayout],
   },
