--- a/examples/starter-lit-jsx/src/pages/about.mdx
+++ b/examples/starter-lit-jsx/src/pages/about.mdx
@@ -1,9 +1,8 @@
 import { BaseLayout } from '@/layouts/base-layout';
 import { Card } from '@/components/card';
 
-export const layout = BaseLayout;
-
 export const config = {
+	layout: BaseLayout,
 	dependencies: {
 		components: [BaseLayout, Card],
 	},
