--- a/examples/starter-jsx/src/pages/about.mdx
+++ b/examples/starter-jsx/src/pages/about.mdx
@@ -2,9 +2,8 @@ import { BaseLayout } from '@/layouts/base-layout';
 import { Card } from '@/components/card';
 import { RadiantCounter } from '@/components/radiant-counter';
 
-export const layout = BaseLayout;
-
 export const config = {
+	layout: BaseLayout,
 	dependencies: {
 		components: [BaseLayout, Card, RadiantCounter],
 	},
